tests/baselines/reference/parserFunctionDeclaration5(strict=true).errors.txt
parserFunctionDeclaration5.ts(1,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== parserFunctionDeclaration5.ts (1 errors) ====
    function foo();
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo() { }